--- a/.hintrc
+++ b/.hintrc
@@ -10,6 +10,7 @@
         "label": "off"
       }
     ],
-    "no-inline-styles": "off"
+    "no-inline-styles": "off",
+    "meta-viewport": "off"
   }
 }
